--- a/src/view/index.html
+++ b/src/view/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
+  //= "../blocks/header/header.html"
   <main>
   </main>
   <script src="js/libs.js"></script>
