--- a/src/blocks/blocks.scss
+++ b/src/blocks/blocks.scss
@@ -1,5 +1,8 @@
 @import "./menu/menu.scss";
 @import "./visually-hidden/visually-hidden.scss";
 @import "./vh-check/vh-check";
+@import "./title/title";
+@import "./button/button";
 @import "./logo/logo";
 @import "./header/header";
+@import "./promo/promo";
