--- a/src/view/index.html
+++ b/src/view/index.html
@@ -11,6 +11,7 @@
 <body>
   //= "../blocks/header/header.html"
   <main>
+    //= "../blocks/promo/promo.html"
   </main>
   <script src="js/libs.js"></script>
   <script src="js/general.js"></script>
