Добавил br в промо блок

--- a/src/blocks/promo/promo.scss
+++ b/src/blocks/promo/promo.scss
@@ -87,6 +87,11 @@
     background-size: unset;
   }
 
+  .promo__item {
+    width: 295px;
+    max-width: unset;
+  }
+
   .promo__desc {
     margin-bottom: 75px;
   }
