Закончил блок 'Об услуге'

--- a/src/blocks/blocks.scss
+++ b/src/blocks/blocks.scss
@@ -3,6 +3,10 @@
 @import "./vh-check/vh-check";
 @import "./title/title";
 @import "./button/button";
+@import "./arrow/arrow";
+@import "./count/count";
+@import "./rotate/rotate";
 @import "./logo/logo";
 @import "./header/header";
 @import "./promo/promo";
+@import "./service/service";
