--- a/src/blocks/blocks.scss
+++ b/src/blocks/blocks.scss
@@ -10,3 +10,8 @@
 @import "./header/header";
 @import "./promo/promo";
 @import "./service/service";
+@import "./about/about";
+@import "./case/case";
+@import "./stages/stages";
+@import "./contract/contract";
+
