--- a/src/view/index.html
+++ b/src/view/index.html
@@ -13,6 +13,10 @@
   <main>
     //= "../blocks/promo/promo.html"
     //= "../blocks/service/service.html"
+    //= "../blocks/about/about.html"
+    //= "../blocks/case/case.html"
+    //= "../blocks/stages/stages.html"
+    //= "../blocks/contract/contract.html"
   </main>
   <script src="js/libs.js"></script>
   <script src="js/general.js"></script>
