Исправил отступ в блоке Работаю по договору

--- a/src/blocks/contract/contract.scss
+++ b/src/blocks/contract/contract.scss
@@ -78,6 +78,7 @@
     max-width: 630px;
     margin-bottom: 100px;
     font-size: 24px;
+    margin-left: 85px;
   }
 
   .contract__item {
@@ -86,6 +87,7 @@
 
   .contract__list {
     margin-bottom: 65px;
+    margin-left: 85px;
   }
 
   .contract__title {
