--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -132,17 +132,24 @@
   .footer__form {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
     background-color: transparent;
 
     .input {
       margin-left: 0;
-
+      &:last-child {
+        margin-left: auto;
+      }
       &:first-child {
         margin-right: 30px;
       }
+    }
+
+    .button {
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 
